# Platypus

./: .gitignore  .mxproject  CMakeLists.txt  Platypus.elf  Platypus.ioc  build.sh
.cache/clangd/index/: buffer.hpp.3268CA3C7F034638.idx  cmsis_compiler.h.5FC715D28B2923FF.idx  cmsis_gcc.h.8E33194993A9AE72.idx  cmsis_version.h.798536A7DDCCF9ED.idx  core_cm4.h.D90FAE4D9BA0DABD.idx  debug_terminal.hpp.0FB8AE1E524A554E.idx  main.c.EFB231D15355E204.idx  main.cpp.7F81B3847BE34D61.idx  main.h.B9F7D9130A51F4F4.idx  mpu_armv7.h.EDFEECFEC87070AE.idx  startup_stm32f405xx.s.B93DA99121F1E645.idx  stm32_hal_legacy.h.441CAB5FBC469F4C.idx  stm32f405xx.h.F7F93D87AED230F2.idx  stm32f4xx.h.94B1162613B94D61.idx  stm32f4xx_hal.c.2372DD90D8407B73.idx  stm32f4xx_hal.h.494E104B81ECEA5B.idx  stm32f4xx_hal_conf.h.ED380D4FECBD8157.idx  stm32f4xx_hal_cortex.c.63577968EC11DE9F.idx  stm32f4xx_hal_cortex.h.810BE7379D2B02B1.idx  stm32f4xx_hal_def.h.B67C821E43428BBD.idx  stm32f4xx_hal_dma.c.C92962F26D9CEFBB.idx  stm32f4xx_hal_dma.h.5CDB94AE3C831812.idx  stm32f4xx_hal_dma_ex.c.C96D2D2CCA4A4A90.idx  stm32f4xx_hal_dma_ex.h.9E73ACE63607F212.idx  stm32f4xx_hal_exti.c.983A7DA3ECBBDD9F.idx  stm32f4xx_hal_exti.h.D1CB3785563EC5EE.idx  (+38 more)
Core/Inc/: main.h  stm32f4xx_hal_conf.h
Core/Lib/Debug/: CMakeLists.txt
Core/Lib/Debug/include/: debug_terminal.hpp
Core/Lib/Debug/src/: buffer.hpp  swo_backend.cpp  swo_backend.hpp  swo_terminal.cpp
Core/Src/: LED.h  LED_Base.h  LED_RGB.h  SD_Card.h  gpio.c  main.c  main.cpp  sdio.c  stm32f4xx_hal_msp.c
cmake/stm32cubemx/: CMakeLists.txt
